# hdmi

./: .gitignore  Makefile  README.md  pyproject.toml  tangnano20k.cst
formal/: video_format_encoder.sby
src/: hdmi_pll.v  hdmi_transmitter.v  serializer.v  tmds_encoder.v  top.v  top2.v  top2_pll.v  video_format_encoder.v  video_formats.vh
tests/: test_runner.py  test_serializer.py  test_tmds_encoder.py
