[tool.poetry]
name = "hdmi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.389"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.3"
cocotb = "^1.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
